# django-hexagonal-example

./: manage.py  pyproject.toml
app/: asgi.py  settings.py  urls.py  wsgi.py
core/: models.py
saude/: asgi.py  models.py  settings.py  urls.py  wsgi.py
saude/adapters/http/: consultation_controller.py  professional_controller.py
saude/adapters/sqlite/: consultation_repository.py  professional_repository.py
saude/application/: consultation_service.py  i_consultation_service.py  i_professional_service.py  professional_service.py
saude/domain/entities/: consultation_entity.py  professional_entity.py
saude/domain/entities/etc/: query_set.py
saude/dtos/input/: consultation_input.py  professional_input.py
saude/dtos/output/: consultation_output.py  consultation_serializer.py  professional_output.py  professional_serializer.py
saude/migrations/: 0001_initial.py  0002_alter_professionalentity_phone_number_and_more.py
saude/ports/outbound/: consultation_repository.py  i_professional_repository.py  professional_repository.py
